// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`do not renders Watchbar without cards 1`] = `""`;

exports[`renders a WatchBar 1`] = `
<div>
  <Carousel
    absoluteNavigation={false}
    alignCenter={false}
    flex={false}
    magneticMax={0.8}
    magneticMin={0.2}
    minWidthArrowDisplaying={900}
    offsetLeft="0"
    slideMargin={8}
    withArrow={true}
  >
    <Cards.Content
      card={
        Object {
          "channel": "E1FR",
          "img": "https://i.eurosport.com/taiga/MagicBox/Crop/16_9/0_20180710-125830.jpeg?w=640",
          "isLive": false,
          "liveLabel": "live",
          "playerChannelNameAnalytics": "analytics",
          "timestamp": "09:00 - 10:30",
          "title": "Darts: BDO World Championship",
          "titleAnalytics": "title",
          "url": "/article/id",
        }
      }
      key="Darts: BDO World Championshipundefinedundefined"
      trackingPosition={0}
    />
    <Cards.Content
      card={
        Object {
          "channel": "E1FR",
          "img": "https://i.eurosport.com/taiga/MagicBox/Crop/16_9/0_20180710-125830.jpeg?w=640",
          "isLive": false,
          "liveLabel": "live",
          "playerChannelNameAnalytics": "analytics",
          "timestamp": "09:00 - 10:30",
          "title": "Darts: BDO World Championship",
          "titleAnalytics": "title",
          "url": "/article/id",
        }
      }
      key="Darts: BDO World Championshipundefinedundefined"
      trackingPosition={1}
    />
    <Cards.Content
      card={
        Object {
          "channel": "E1FR",
          "img": "https://i.eurosport.com/taiga/MagicBox/Crop/16_9/0_20180710-125830.jpeg?w=640",
          "isLive": false,
          "liveLabel": "live",
          "playerChannelNameAnalytics": "analytics",
          "timestamp": "09:00 - 10:30",
          "title": "Darts: BDO World Championship",
          "titleAnalytics": "title",
          "url": "/article/id",
        }
      }
      key="Darts: BDO World Championshipundefinedundefined"
      trackingPosition={2}
    />
    <Cards.Content
      card={
        Object {
          "channel": "E1FR",
          "img": "https://i.eurosport.com/taiga/MagicBox/Crop/16_9/0_20180710-125830.jpeg?w=640",
          "isLive": false,
          "liveLabel": "live",
          "playerChannelNameAnalytics": "analytics",
          "timestamp": "09:00 - 10:30",
          "title": "Darts: BDO World Championship",
          "titleAnalytics": "title",
          "url": "/article/id",
        }
      }
      key="Darts: BDO World Championshipundefinedundefined"
      trackingPosition={3}
    />
  </Carousel>
</div>
`;

exports[`renders a WatchBar with a title 1`] = `
<div>
  <Styled(div)
    isCarouselCard={false}
    key="Live on Eurosport"
  >
    <Styled(div)>
      <Styled(Play)
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      />
      <Styled(div)>
        Live on Eurosport
      </Styled(div)>
    </Styled(div)>
  </Styled(div)>
  <Carousel
    absoluteNavigation={false}
    alignCenter={false}
    flex={false}
    magneticMax={0.8}
    magneticMin={0.2}
    minWidthArrowDisplaying={900}
    offsetLeft="0"
    slideMargin={8}
    withArrow={true}
  >
    <Styled(div)
      isCarouselCard={true}
      key="Live on Eurosport"
    >
      <Styled(div)>
        <Styled(Play)
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <Styled(div)>
          Live on Eurosport
        </Styled(div)>
      </Styled(div)>
    </Styled(div)>
    <Cards.Content
      card={
        Object {
          "channel": "E1FR",
          "img": "https://i.eurosport.com/taiga/MagicBox/Crop/16_9/0_20180710-125830.jpeg?w=640",
          "isLive": false,
          "liveLabel": "live",
          "playerChannelNameAnalytics": "analytics",
          "timestamp": "09:00 - 10:30",
          "title": "Darts: BDO World Championship",
          "titleAnalytics": "title",
          "url": "/article/id",
        }
      }
      key="Darts: BDO World Championshipundefinedundefined"
      trackingPosition={0}
    />
    <Cards.Content
      card={
        Object {
          "channel": "E1FR",
          "img": "https://i.eurosport.com/taiga/MagicBox/Crop/16_9/0_20180710-125830.jpeg?w=640",
          "isLive": false,
          "liveLabel": "live",
          "playerChannelNameAnalytics": "analytics",
          "timestamp": "09:00 - 10:30",
          "title": "Darts: BDO World Championship",
          "titleAnalytics": "title",
          "url": "/article/id",
        }
      }
      key="Darts: BDO World Championshipundefinedundefined"
      trackingPosition={1}
    />
    <Cards.Content
      card={
        Object {
          "channel": "E1FR",
          "img": "https://i.eurosport.com/taiga/MagicBox/Crop/16_9/0_20180710-125830.jpeg?w=640",
          "isLive": false,
          "liveLabel": "live",
          "playerChannelNameAnalytics": "analytics",
          "timestamp": "09:00 - 10:30",
          "title": "Darts: BDO World Championship",
          "titleAnalytics": "title",
          "url": "/article/id",
        }
      }
      key="Darts: BDO World Championshipundefinedundefined"
      trackingPosition={2}
    />
    <Cards.Content
      card={
        Object {
          "channel": "E1FR",
          "img": "https://i.eurosport.com/taiga/MagicBox/Crop/16_9/0_20180710-125830.jpeg?w=640",
          "isLive": false,
          "liveLabel": "live",
          "playerChannelNameAnalytics": "analytics",
          "timestamp": "09:00 - 10:30",
          "title": "Darts: BDO World Championship",
          "titleAnalytics": "title",
          "url": "/article/id",
        }
      }
      key="Darts: BDO World Championshipundefinedundefined"
      trackingPosition={3}
    />
  </Carousel>
</div>
`;
